# prosuite-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  renovate.json
.github/workflows/: checks.yml  release.yml
examples/: local_llm_chat.py
src/prosuite_mcp/: __init__.py  catalog.py  cli.py  config.py  server.py  spec.py
tests/: test_catalog.py  test_server.py  test_spec.py
